Schedule grid header WIP.